2001-07-09  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_general.c (bk_general_destroy): redo config stuff for new
	interface.

	* lib/b_fun.c (funstack_error_reason): properly protect macro args.

	* lib/b_config.c: first codelets for config stuff.

2001-07-04  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_general.c: Completed and compiling!