@@ -1,3 +1,7 @@
+2001-07-13  James Tanis  <jtt@outpost.tanis.org>
+
+	* lib/b_config.c: More config stuff.
+
 2001-07-09  James Tanis  <jtt@outpost.tanis.org>
 
 	* lib/b_general.c (bk_general_destroy): redo config stuff for new
